--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,92 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
+div a p img section h1 h2 h3 ul li {
+  border: 1px solid red;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+/*Модификатор логотип*/
+.logo_place_header {
+position: absolute;
+top: 30;
+left: 64;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+/* и элемента с модификатором вида ключ-значение 111*/
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.header {
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+  background-color: #f2f2f2;
+  position: relative;
+  /* выше установили ограничения для секции */
+}
+
+/*Логотип ЯП*/
+.logo {
+height: 32px;
+width: 183px;
+}
+
+/*Заголовок*/
+.header__title {
+  width: 730px;
+}
+
+/*Подзаголовок*/
+.header__subtitle {
+  width: 388px;
+  position: absolute;
+  bottom: 30;
+  left: 64;
+}
+
+/*Картинка*/
+.header__main-illustration {
+  height: 608px;
+  width: 765px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+
+/*Квадрат111*/
+.header__square-pic {
+  height: 568px;
+  width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64;
+  right: 0;
+}
+
+.content {
+
+}
+
+.description {
+
+}
+.digits {
+
+}
+
+.feynman {
+
+}
+
+.kaufman {
+
+}
+
+.footer {
+
 }
