--- a/styles/style.css
+++ b/styles/style.css
@@ -9,31 +9,24 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-div a p img section h1 h2 h3 ul li {
-  border: 1px solid red;
-}
-
 /*Модификатор логотип*/
 .logo_place_header {
-position: absolute;
-top: 30;
-left: 64;
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 2;
 }
 
-/* и элемента с модификатором вида ключ-значение 111*/
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
-
+/*Шапка сайта*/
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
+  display: flex;
+  align-items: center;
   position: relative;
+  color: #000;
   /* выше установили ограничения для секции */
 }
 
@@ -46,14 +39,28 @@ width: 183px;
 /*Заголовок*/
 .header__title {
   width: 730px;
+  font-size: 102px;
+  line-height: 96px;
+  margin-left: 64px;
+  z-index: 2;
+  font-weight: bold;
 }
 
 /*Подзаголовок*/
 .header__subtitle {
   width: 388px;
   position: absolute;
-  bottom: 30;
-  left: 64;
+  bottom: 30px;
+  left: 64px;
+  z-index: 2;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
 }
 
 /*Картинка*/
@@ -72,29 +79,307 @@ width: 183px;
   width: 568px;
   background-color: #2f80ed;
   position: absolute;
-  top: 64;
+  top: 64px;
   right: 0;
 }
 
+/*Основное содержимое страницы*/
 .content {
-
+margin: 0 auto;
+color: #000;
 }
 
+/*Главные проблемы в обучении*/
 .description {
-
+margin-top: 100px;
 }
+
+.two-columns {
+  margin: 100px auto;
+  width: 80%;
+  justify-content: space-between;
+  display: flex;
+}
+
+.two-columns__brief {
+  width: 175px;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #2f80ed;
+  margin: 0;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph{
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.two-columns__paragraph_indent {
+  margin-bottom: 0;
+  }
+
+.two-columns__span-accent {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: bold;
+}
+
+/*Цифры и факты*/
 .digits {
+margin: 0 auto;
+display: flex;
+flex-direction: column;
+}
+
+.section-title {
+  width: 60%;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto 20px;
+}
+
+.section-title_theme_light {
+margin-top: 100px;
+}
+
+.section-subtitle {
+  width: 60%;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.section-subtitle_theme_light {
 
 }
 
-.feynman {
+/*Таблица*/
+.table {
+  width: 1100px;
+  margin: 0 auto;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.table_theme_light {
+  margin-bottom: 100px;
+  justify-content: space-between;
+}
+
+/*Ячейки*/
+.table__cell {
+
+}
+
+.table__cell_theme_light {
+  margin-top: 60px;
+  width: 250px;
+}
+
+/*Заголовок ячейки*/
+.table__heading {
+  margin: 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.table__heading_theme_light {
+
+}
+
+/*Текст ячейки*/
+.table__text{
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+}
+
+.table__text_theme_light {
+
+}
+
+.table__text_p-2 {
+  margin-top: 20px;
+}
+
+/*Фейнман*/
+.feynman {
+  height: 890px;
+  background-image: url("../images/feynman.png");
+  background-color: #f2f2f2;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin: 0 auto;
+}
+
+.feynman__title {
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: bold;
+  width: 648px;
+  margin: 100px auto 70px;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0 auto;
+  }
+
+.feynman__link {
+  text-decoration: none;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  position: absolute;
+  color: #2f80ed;
+  top: 50%;
+  right: 48px;
 }
 
 .kaufman {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  background-color: #1f1f1f;
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+}
 
+.section-title_theme_dark {
+  margin-top: 90px;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  z-index: 1;
+}
+
+.table_theme_dark {
+  justify-content: space-between;
+  margin-bottom: 90px;
+  z-index: 1;
+}
+
+/* Ячейки 111*/
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-top: 80px;
+}
+
+.kaufman__triangle {
+  height: 877px;
+  width: 877px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: 100%;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0;
 }
 
 .footer {
+  background-color: #1f1f1f;
+  color: #fff;
+  margin: 0 auto;
+  display: flex;
+  padding-top: 60px;
+  padding-bottom: 40px;
 
+  min-height: 350px;
 }
+
+.footer__columns {
+  width: 90%;
+
+  border: #fff 1px solid;
+  margin: 0 auto;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  border: #fff 1px solid;
+  justify-content: space-between;
+}
+
+.footer__author {
+  padding: 18px 0;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  border: #fff 1px solid;
+}
+
+.footer__column_content_info {
+  justify-content: flex-start;
+  border: #fff 1px solid;
+}
+
+.footer__column_content_social {
+  justify-content: flex-start;
+  border: #fff 1px solid;
+}
+
+.footer__column-heading {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+  border: #fff 1px solid;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: column;
+  border: #fff 1px solid;
+  padding-bottom: 16px;
+}
+
+.footer__column-link {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer__social-icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
+  border: #fff 1px solid;
+}
+
