--- a/styles/style.css
+++ b/styles/style.css
@@ -134,15 +134,16 @@
   font-weight: bold;
 }
 
-.two-columns__paragraph_last {
+.two-columns__paragraph:last-child {
   margin-bottom: 0;
   }
 
 /*Цифры и факты*/
 .digits {
-margin: 0 auto;
-display: flex;
-flex-direction: column;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 100px 0;
 }
 
 .section-title {
@@ -171,11 +172,14 @@ flex-direction: column;
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 /*Ячейки*/
 .table__cell {
   margin: 0;
+  width: 250px;
+  margin-top: 60px;
 }
 
 /*Заголовок ячейки*/
@@ -184,7 +188,6 @@ flex-direction: column;
   font-size: 24px;
   line-height: 1.15;
   font-weight: bold;
-  margin-bottom: 20px;
 }
 
 /*Текст ячейки*/
@@ -193,29 +196,12 @@ flex-direction: column;
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
-}
-
-.section-title_theme_light {
-margin-top: 100px;
-}
-
-.table_theme_light {
-  margin-bottom: 100px;
-  justify-content: space-between;
-}
-
-.table__cell_theme_light {
-  margin-top: 60px;
-  width: 250px;
-}
-
-.table__text_p-last {
   margin-top: 20px;
 }
 
 /*Фейнман*/
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-image: url("../images/feynman.png");
   background-color: #f2f2f2;
   background-repeat: no-repeat;
@@ -275,7 +261,6 @@ margin-top: 100px;
 }
 
 .table_theme_dark {
-  justify-content: space-between;
   margin-bottom: 90px;
   z-index: 1;
 }
@@ -318,7 +303,7 @@ margin-top: 100px;
   margin-bottom: 20px;
 }
 
-.footer__links {
+.footer__column-links {
   font-size: 18px;
   line-height: 30px;
   font-weight: normal;
@@ -356,6 +341,7 @@ margin-top: 100px;
 }
 
 .footer__author {
+  margin: 0;
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
