--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@
   }
 
 .two-columns {
-  margin: 100px auto;
+  margin: 100px auto 0;
   width: 80%;
   justify-content: space-between;
   display: flex;
