--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,8 +1,8 @@
 .video__iframe {
   border: none;
   margin-right: 20px;
-  width: 515;
-  height: 316;
+  width: 515px;
+  height: 316px;
 }
 
 .video__iframe:last-child {
